<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bakground"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageButton
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/back"
                android:onClick="onBack"
                android:background="@null"
                android:contentDescription="@string/back_button"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp" />

            <Switch
                android:id="@+id/face_frame"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text="@string/face_frame"
                android:padding="10sp"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/explan_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/face_frame_description"
                android:textSize="13sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp" />

            <Switch
                android:id="@+id/face_mark"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text="@string/face_mark"
                android:padding="10sp"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/explan_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/face_mark_description"
                android:textSize="13sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp" />

            <Switch
                android:id="@+id/face_high_mark"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text="@string/face_high_mark"
                android:padding="10sp"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/explan_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/face_high_mark_description"
                android:textSize="13sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp" />

            <Switch
                android:id="@+id/face_value"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text="@string/face_value"
                android:padding="10sp"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/explan_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/face_value_description"
                android:textSize="13sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp" />

            <Switch
                android:id="@+id/ai_high_speed"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text="@string/ai_high_speed"
                android:padding="10sp"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/explan_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/ai_high_speed_description"
                android:textSize="13sp"
                android:textStyle="bold"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"/>

            <Switch
                android:id="@+id/selection_num"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text="@string/selection_num"
                android:padding="10sp"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/explan_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/selection_num_description"
                android:textSize="13sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
